--- a/templates/situations.html
+++ b/templates/situations.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1>{{ subtitle }}</h1>
+    <a href="{{ url_for('index', lang_code = g.current_lang) }}">{{ _('zurück') }}</a>
 {% endblock %}
