--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,11 @@
 
 {% block styles %}
     {{ super() }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% endblock %}
 
-{% block body %}
-    {{ _('Ich esse nix!') }}
-    {{ _('Ich kacke!') }}
-    {{ _('Ich pisse!') }}
-    {{ _('Ich mache!') }}
-    {{ _('Ich xxxx!') }}
+{% block content %}
+    <a href="{{ url_for('catalog', lang_code = g.current_lang) }}">{{ _('Katalog') }}</a>
+    <a href="{{ url_for('situations', lang_code = g.current_lang) }}">{{ _('Lebenslagen') }}</a>
 {% endblock %}
