--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -25,11 +25,36 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ link_group.id }}">{{ link_group.name }}</a>
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ link_group.name }}">
+                            {% if link_group.name == 'api' %}
+                                {{ _('API (Programmierschnittstellen)') }}
+                            {% elif link_group.name == 'application' %}
+                                {{ _('Anwendungen') }}
+                            {% elif link_group.name == 'documentation' %}
+                                {{ _('Dokumentationen') }}
+                            {% elif link_group.name == 'download' %}
+                                {{ _('Download') }}
+                            {% elif link_group.name == 'external' %}
+                                {{ _('externe Links') }}
+                            {% elif link_group.name == 'geoservice' %}
+                                {{ _('Geodatendienste') }}
+                            {% elif link_group.name == 'helper' %}
+                                {{ _('Tools') }}
+                            {% else %}
+                                {{ link_group.name }}
+                            {% endif %}
+                            </a>
                         </h4>
                     </div>
-                    <div id="collapse-{{ link_group.id }}" class="panel-collapse collapse">
-                        <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                    <div id="collapse-{{ link_group.name }}" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% if link_group.name == 'external' %}
+                                {% for external in externals %}
+                                    <a href="{{ external.link }}" target="_blank">{{ external.title }}</a>
+                                    <br/>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             {% endfor %}
