layout and styling; catalog view: completed external links, completed documentation and completed downloads; catalog view: started with geoservices

--- a/static/styles/catalog.css
+++ b/static/styles/catalog.css
@@ -1,3 +1,13 @@
+.external_links {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.filter-input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .green {
   color: #00b748;
 }
