--- a/templates/index.html
+++ b/templates/index.html
@@ -3,24 +3,26 @@
 {% block html_attribs %} lang="{{ g.current_lang }}"{% endblock %}
 
 {% block metas %}
-    {{ super() }}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="author" content="{{ config.META_AUTHOR }}" />
-    <meta name="description" content="{{ config.META_DESCRIPTION }}" />
-    <meta name="keywords" content="{{ config.META_KEYWORDS }}" />
+  {{ super() }}
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="author" content="{{ config.META_AUTHOR }}" />
+  <meta name="description" content="{{ config.META_DESCRIPTION }}" />
+  <meta name="keywords" content="{{ config.META_KEYWORDS }}" />
 {% endblock %}
 
 {% block title %}
-    {{ config.TITLE }}{% block subtitle %}{% if subtitle %} – {{ subtitle }}{% endif %}{% endblock -%}
+  {{ config.TITLE }}{% block subtitle %}{% if subtitle %} – {{ subtitle }}{% endif %}{% endblock -%}
 {% endblock %}
 
 {% block styles %}
-    {{ super() }}
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  {{ super() }}
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% endblock %}
 
 {% block content %}
-    <a href="{{ url_for('catalog', lang_code = g.current_lang) }}">{{ _('Katalog') }}</a>
-    <a href="{{ url_for('situations', lang_code = g.current_lang) }}">{{ _('Lebenslagen') }}</a>
+  {% include 'navbar.html' %}
+  <div class="container-fluid">
+  </div>
+  {% include 'footer.html' %}
 {% endblock %}
