--- a/templates/situations.html
+++ b/templates/situations.html
@@ -3,5 +3,6 @@
 {% set active_page = 'situations' %}
 
 {% block content %}
-    {% include 'navbar.html' %}
+  {% include 'navbar.html' %}
+  {% include 'footer.html' %}
 {% endblock %}
