--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -20,7 +20,7 @@
         <div class="panel panel-info">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ group.name }}">
+              <a data-toggle="collapse" data-parent="#accordion" href="#{{ group.name }}">
                 {% if group.name == 'api' %}
                   <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> {{ _('API (Programmierschnittstellen)') }}
                 {% elif group.name == 'application' %}
@@ -41,7 +41,7 @@
               </a>
             </h4>
           </div>
-          <div id="collapse-{{ group.name }}" class="panel-collapse collapse">
+          <div id="{{ group.name }}" class="panel-collapse collapse">
             <div class="panel-body">
               {% if group.name == 'documentation' %}
                 <div class="list-group">
@@ -83,12 +83,55 @@
                 {% endfor %}
               {% endif %}
               {% if group.name == 'geoservice' %}
-                <div id="geoservice-checkboxes">
-                {% for geoservice_tag in geoservice_tags %}
-                  <label class="checkbox-inline">
-                    <input type="checkbox" id="geoservice-checkbox-{{ geoservice_tag.id }}" value="{{ geoservice_tag.id }}" checked="checked" /> {{ geoservice_tag.title }}
-                  </label>
-                {% endfor %}
+                <div class="checkboxes" id="geoservice-checkboxes">
+                  {% for geoservice_tag in geoservice_tags %}
+                    <label class="checkbox-inline">
+                      <input type="checkbox" class="geoservice-checkbox" id="geoservice-checkbox-{{ geoservice_tag.id }}" value="{{ geoservice_tag.title }}" checked="checked" /> {{ geoservice_tag.title }}
+                    </label>
+                  {% endfor %}
+                </div>
+                <input class="filter-input" id="geoservice-filter-input" placeholder="{{ _('Listeninhalte filtern') }}…" type="text" />
+                <div class="panel-group" id="geoservice-accordion">
+                  {% for geoservice_link in geoservice_links %}
+                    {% if geoservice_link.parent_id == geoservice_link.id %}
+                      <div class="panel panel-info">
+                        <div class="panel-heading">
+                          <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#geoservice-{{ geoservice_link.id }}">
+                              <span class="full-width">{{ geoservice_link.title }}</span>
+                              <small>
+                              {% for typifier_tag in geoservice_link.id|get_link_children_typifier_tags(True) %}
+                                {{ typifier_tag }}{% if not loop.last %} • {% endif %}
+                              {% endfor %}
+                              </small>
+                            </a>
+                          </h4>
+                        </div>
+                        <div id="geoservice-{{ geoservice_link.id }}" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <h5 class="first">{{ _('Schlagworte/Tags/Keywords') }}</h5>
+                            {% for child in geoservice_link.id|get_link_children(True) %}
+                              <h5>{{ child.id|get_link_typifier_tag(True) }}</h5>
+                              <span class="full-width"><em>{{ _('Beschreibung') }}</em></span>
+                              <span class="full-width">{{ child.title }}</span>
+                              <span class="full-width"><em>{{ _('Link') }}</em></span>
+                              <a href="{{ child.link }}" target="_blank">
+                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
+                                <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                                {{ child.link }}
+                              </a>
+                            {% endfor %}
+                            <h5>{{ _('Stand der Datenquelle') }}</h5>
+                            <span class="full-width">{{ geoservice_link.title }}</span>
+                            <h5>{{ ngettext('Stelle des Autors', 'Stellen der Autoren', 1) }}</h5>
+                            <span class="full-width">{{ geoservice_link.title }}</span>
+                            <h5>{{ ngettext('Autor (Kontakt)', 'Autoren (Kontakt)', 2) }}</h5>
+                            <span class="full-width">{{ geoservice_link.title }}</span>
+                          </div>
+                        </div>
+                      </div>
+                    {% endif %}
+                  {% endfor %}
                 </div>
               {% endif %}
             </div>
