--- a/templates/imprint.html
+++ b/templates/imprint.html
@@ -1,71 +1,64 @@
 {% extends 'index.html' %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/static-page.css') }}" />
+{% endblock %}
+
 {% block content %}
   {% include 'navbar.html' %}
   <div class="container-fluid">
-    <h3 class="static-page-headline">{{ subtitle }}</h3>
-    <h4 class="static-page-subheadline">{{ _('Herausgeberin') }}</h4>
-    <p>{{ _('Hanse- und Universitätsstadt Rostock') }}
-    <br/>
-    {{ _('Büro des Oberbürgermeisters') }}
-    <br/>
-    {{ _('Presse- und Informationsstelle') }}
-    <br/>
-    18050 Rostock
-    <br/>
-    {{ _('Telefon') }}: +49 381 381-1417
-    <br/>
-    {{ _('Telefax') }}: +49 381 381-9130
-    <br/>
-    {{ _('E-Mail') }}: <a href="mailto:presse@rostock.de">presse@rostock.de</a></p>
-    <h4 class="static-page-subheadline">{{ _('Umsatzsteuer-Identifikationsnummer gemäß § 27a Umsatzsteuergesetz') }}</h4>
+    <h3 class="headline">{{ subtitle }}</h3>
+    <h4 class="subheadline">{{ _('Herausgeberin') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">{{ _('Presse- und Informationsstelle') }}</span>
+      <span class="full-width">18050 Rostock</span>
+      <span class="full-width">{{ _('Telefon') }}: +49 381 381-1417</span>
+      <span class="full-width">{{ _('Telefax') }}: +49 381 381-9130</span>
+      {{ _('E-Mail') }}: <a href="mailto:presse@rostock.de">presse@rostock.de</a>
+    </p>
+    <h4 class="subheadline">{{ _('Umsatzsteuer-Identifikationsnummer gemäß § 27a Umsatzsteuergesetz') }}</h4>
     <p>DE 137385469</p>
-    <h4 class="static-page-subheadline">{{ _('Verantwortung gemäß § 7 Abs. 1 Telemediengesetz') }}</h4>
-    <p>{{ _('Hanse- und Universitätsstadt Rostock') }}
-    <br/>
-    {{ _('Büro des Oberbürgermeisters') }}
-    <br/>
-    Ulrich Kunze
-    <br/>
-    {{ _('Pressesprecher Presse- und Informationsstelle') }}
-    <br/>
-    18050 Rostock
-    <br/>
-    {{ _('Telefon') }}: +49 381 381-1418
-    <br/>
-    {{ _('Telefax') }}: +49 381 381-9135
-    <br/>
-    {{ _('E-Mail') }}: <a href="mailto:ulrich.kunze@rostock.de">ulrich.kunze@rostock.de</a></p>
-    <h4 class="static-page-subheadline">{{ _('Konzept, Betreuung und technische Realisierung') }}</h4>
-    <p>{{ _('Hanse- und Universitätsstadt Rostock') }}
-    <br/>
-    {{ _('Kataster-, Vermessungs- und Liegenschaftsamt') }}
-    <br/>
-    Holbeinplatz 14
-    <br/>
-    18069 Rostock
-    <br/>
-    {{ _('Telefon') }}: +49 381 381-6281
-    <br/>
-    {{ _('Telefax') }}: +49 381 381-6902
-    <br/>
-    {{ _('E-Mail') }}: <a href="mailto:geodienste@rostock.de">geodienste@rostock.de</a></p>
-    <h4 class="static-page-subheadline">{{ _('Haftung für angebotene Inhalte') }}</h4>
+    <h4 class="subheadline">{{ _('Verantwortung gemäß § 7 Abs. 1 Telemediengesetz') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Büro des Oberbürgermeisters') }}</span>
+      <span class="full-width">Ulrich Kunze</span>
+      <span class="full-width">{{ _('Pressesprecher Presse- und Informationsstelle') }}</span>
+      <span class="full-width">18050 Rostock</span>
+      <span class="full-width">{{ _('Telefon') }}: +49 381 381-1418</span>
+      <span class="full-width">{{ _('Telefax') }}: +49 381 381-9135</span>
+      {{ _('E-Mail') }}: <a href="mailto:ulrich.kunze@rostock.de">ulrich.kunze@rostock.de</a>
+    </p>
+    <h4 class="subheadline">{{ _('Konzept, Betreuung und technische Realisierung') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Hanse- und Universitätsstadt Rostock') }}</span>
+      <span class="full-width">{{ _('Kataster-, Vermessungs- und Liegenschaftsamt') }}</span>
+      <span class="full-width">Holbeinplatz 14</span>
+      <span class="full-width">18069 Rostock</span>
+      <span class="full-width">{{ _('Telefon') }}: +49 381 381-6281</span>
+      <span class="full-width">{{ _('Telefax') }}: +49 381 381-6902</span>
+      {{ _('E-Mail') }}: <a href="mailto:geodienste@rostock.de">geodienste@rostock.de</a>
+    </p>
+    <h4 class="subheadline">{{ _('Haftung für angebotene Inhalte') }}</h4>
     <p>{{ _('Trotz sorgfältigen Recherchen und Prüfungen übernimmt die Hanse- und Universitätsstadt Rostock für die Richtigkeit, Vollständigkeit und Aktualität der von ihr angebotenen Inhalte keine Gewähr und keine Haftung. Insbesondere haftet die Hanse- und Universitätsstadt Rostock nicht für Schäden, die durch die direkte oder indirekte Nutzung oder Nichtnutzung der angebotenen Inhalte verursacht werden. Die Hanse- und Universitätsstadt Rostock behält es sich ferner ausdrücklich vor, einzelne Inhalte oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen. Die Hanse- und Universitätsstadt Rostock ist als Diensteanbieterin gemäß § 7 Abs. 1 Telemediengesetz (TMG) für ihre eigenen Inhalte, die sie zur Nutzung bereithält, verantwortlich. Gemäß §§ 8 bis 10 TMG ist sie jedoch nicht verpflichtet, von fremden Eigentümern übermittelte oder gespeicherte Inhalte, die sie zur Nutzung bereithält, auf etwaige Rechtsverletzungen zu überprüfen. Gleichwohl verpflichtet sie sich zur umgehenden Entfernung betroffener Inhalte ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung.') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Haftung für externe Links') }}</h4>
+    <h4 class="subheadline">{{ _('Haftung für externe Links') }}</h4>
     <p>{{ _('Für die von Dritten angebotenen fremden Inhalte, auf die mittels externer Links verwiesen ist, übernimmt die Hanse- und Universitätsstadt Rostock keine Gewähr und keine Haftung, da sich diese Inhalte ihrer Einflussnahme entziehen. Verantwortlich für diese Inhalte ist stets der jeweilige Anbieter. Alle mittels externer Links verknüpfte fremde Inhalte wurden zum Zeitpunkt ihrer Verlinkung auf mögliche Rechtsverletzungen überprüft, mit dem Resultat, dass keine konkreten Rechtsverletzungen erkannt wurden. Die kontinuierliche Kontrolle der verlinkten Inhalte allerdings ist ohne Anhaltspunkte für eine konkrete Rechtsverletzung nicht zumutbar. Sollte die Hanse- und Universitätsstadt Rostock hingegen von einer konkreten Rechtsverletzung Kenntnis erlangen, wird sie die entsprechenden externen Links umgehend entfernen.') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Urheberrecht') }}</h4>
+    <h4 class="subheadline">{{ _('Urheberrecht') }}</h4>
     <p>{{ _('Die von der Hanse- und Universitätsstadt Rostock angebotenen und in ihrem Eigentum befindlichen Inhalte unterliegen der gemeinfreien Lizenz') }} <a href="https://creativecommons.org/publicdomain/zero/1.0" target="_blank">Creative Commons Zero Universal 1.0 Public Domain Dedication</a> {{ _('(CC0 1.0). Damit ist alles gestattet, ohne um weitere Erlaubnis bitten zu müssen.') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Verweise auf angebotene Inhalte') }}</h4>
+    <h4 class="subheadline">{{ _('Verweise auf angebotene Inhalte') }}</h4>
     <p>{{ _('Verweise auf die angebotenen Inhalte durch externe Angebote Dritter sind ausdrücklich erwünscht. Hingegen sind Verweise durch Angebote natürlicher oder juristischer Personen, die verfassungsfeindliche Ziele verfolgen, die eine sittenwidrige Tätigkeit ausüben oder die die Vermarktung von Artikeln mit sittenwidrigem Inhalt betreiben, nicht zulässig.') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Barrierefreiheit') }}</h4>
+    <h4 class="subheadline">{{ _('Barrierefreiheit') }}</h4>
     <p>{{ _('Die Hanse- und Universitätsstadt Rostock verpflichtet sich in ihren Leitlinien zur Stadtentwicklung die zum 26. März 2009 in Deutschland in Kraft getretene Behindertenrechtskonvention der Vereinten Nationen schrittweise umzusetzen. In ihren Internetauftritten achtet die Hanse- und Universitätsstadt Rostock daher auf die Einhaltung der Barrierefreien Informationstechnik-Verordnung (BITV 2.0). Bei der Erstellung des vorliegenden Angebotes konnten die Vorgaben der BITV 2.0 hingegen nicht vollständig umgesetzt werden, da die Grenzen der Barrierefreiheit unter anderem in der Bedienung interaktiver digitaler Karten liegen. Vollständig umgesetzt werden konnten jedoch die Richtlinien der Web Content Accessibility Guidelines 2.0 (WCAG 2.0) in der Stufe AA des World Wide Web Consortiums (W3C).') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Nutzung der Kontaktdaten') }}</h4>
+    <h4 class="subheadline">{{ _('Nutzung der Kontaktdaten') }}</h4>
     <p>{{ _('Der unverlangten Nutzung der in diesem Impressum veröffentlichten Kontaktdaten der Hanse- und Universitätsstadt Rostock durch Dritte, insbesondere der Zustellung unangeforderter Werbe- oder Informationsmaterialien, widerspricht die Hanse- und Universitätsstadt Rostock hiermit ausdrücklich. Sie behält sich ferner rechtliche Schritte gegen Dritte im Falle der Zustellung unangeforderter Werbe- oder Informationsmaterialien vor.') }}</p>
-    <h4 class="static-page-subheadline">{{ _('Kontakt') }}</h4>
-    <p>{{ _('Kommentare, Anregungen und Kritik zu dem vorliegenden Angebot der Hanse- und Universitätsstadt Rostock richten Sie bitte an:') }}
-    <br/>
-    <a href="mailto:{{ config.CONTACT }}">{{ config.CONTACT }}</a></p>
+    <h4 class="subheadline">{{ _('Kontakt') }}</h4>
+    <p>
+      <span class="full-width">{{ _('Kommentare, Anregungen und Kritik zu dem vorliegenden Angebot der Hanse- und Universitätsstadt Rostock richten Sie bitte an:') }}</span>
+      <a href="mailto:{{ config.CONTACT }}">{{ config.CONTACT }}</a>
+    </p>
   </div>
   {% include 'footer.html' %}
 {% endblock %}
