--- a/static/styles/catalog.css
+++ b/static/styles/catalog.css
@@ -1,3 +1,9 @@
+a > small,
+.full-width > em {
+  display: block;
+  margin-top: 3px;
+}
+
 .checkboxes {
   margin-bottom: 10px;
 }
@@ -20,11 +26,13 @@
   margin-bottom: 0;
 }
 
-.panel-body > h5{
+.panel-body > h5,
+.geoservice-child > h5 {
   margin-top: 25px;
 }
 
-.panel-body > h5.first{
+.panel-body > h5.first,
+.geoservice-child > h5 .first{
   margin-top: 0;
 }
 
