--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -101,7 +101,7 @@
                               <span class="full-width">{{ geoservice_link.title }}</span>
                               <small>
                               {% for typifier_tag in geoservice_link.id|get_link_children_typifier_tags(True) %}
-                                {{ typifier_tag }}{% if not loop.last %} • {% endif %}
+                                <span class="full-width geoservice-typifier-tag">{{ typifier_tag }}</span>
                               {% endfor %}
                               </small>
                             </a>
@@ -110,23 +110,62 @@
                         <div id="geoservice-{{ geoservice_link.id }}" class="panel-collapse collapse">
                           <div class="panel-body">
                             <h5 class="first">{{ _('Schlagworte/Tags/Keywords') }}</h5>
+                            <span class="full-width">
+                              {% for tag in geoservice_link.id|get_link_children_tags(True) %}
+                                  {{ tag }}{% if not loop.last %} •{% endif %}
+                              {% endfor %}
+                            </span>
                             {% for child in geoservice_link.id|get_link_children(True) %}
-                              <h5>{{ child.id|get_link_typifier_tag(True) }}</h5>
-                              <span class="full-width"><em>{{ _('Beschreibung') }}</em></span>
-                              <span class="full-width">{{ child.title }}</span>
-                              <span class="full-width"><em>{{ _('Link') }}</em></span>
-                              <a href="{{ child.link }}" target="_blank">
-                                <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
-                                <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
-                                {{ child.link }}
-                              </a>
+                              <div class="geoservice-child">
+                                {% set typifier_tag = child.id|get_link_typifier_tag(True) %}
+                                <h5>{{ typifier_tag }}</h5>
+                                {% if 'inspire' in typifier_tag|lower and child.inspire_annex_theme != None %}
+                                  <span class="full-width"><em>{{ _('Annex-Thema') }}</em></span>
+                                  <span class="full-width">{{ child.inspire_annex_theme }}</span>
+                                {% endif %}
+                                <span class="full-width"><em>{{ _('Beschreibung') }}</em></span>
+                                <span class="full-width">{{ child.description }}</span>
+                                {% if child.metadata_link != None %}
+                                  <span class="full-width"><em>{{ _('Metadaten') }}</em></span>
+                                  <a href="{{ child.metadata_link }}" target="_blank">
+                                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ child.metadata_link }}
+                                  </a>
+                                {% endif %}
+                                <span class="full-width"><em>{{ _('Link') }}</em></span>
+                                <a href="{{ child.link }}" target="_blank">
+                                  <span class="glyphicon glyphicon-{% if child.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ child.reachable_last_check|datetime_l10n('full') }}"></span>
+                                  <span class="glyphicon glyphicon-eye-{% if child.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" title="{% if child.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                                  {{ child.link }}
+                                </a>
+                              </div>
                             {% endfor %}
-                            <h5>{{ _('Stand der Datenquelle') }}</h5>
-                            <span class="full-width">{{ geoservice_link.title }}</span>
-                            <h5>{{ ngettext('Stelle des Autors', 'Stellen der Autoren', 1) }}</h5>
-                            <span class="full-width">{{ geoservice_link.title }}</span>
-                            <h5>{{ ngettext('Autor (Kontakt)', 'Autoren (Kontakt)', 2) }}</h5>
-                            <span class="full-width">{{ geoservice_link.title }}</span>
+                            {% if geoservice_link.date != None or geoservice_link.authorship_place != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None or geoservice_link.data_link != None %}
+                              <h5>{{ _('Datenquelle') }}</h5>
+                              {% if geoservice_link.date != None %}
+                                <span class="full-width"><em>{{ _('Stand') }}</em></span>
+                                <span class="full-width">{{ geoservice_link.date|date_l10n('full') }}</span>
+                              {% endif %}
+                              {% if geoservice_link.authorship_place != None or geoservice_link.authorship_name != None or geoservice_link.authorship_mail != None %}
+                                <span class="full-width"><em>{{ ngettext('Autor', 'Autoren', geoservice_link.authorship_place|length) }}</em></span>
+                                {% for authorship_place in geoservice_link.authorship_place %}
+                                  <span class="full-width">
+                                    {% if geoservice_link.authorship_name[loop.index0] != None %}
+                                      {% if geoservice_link.authorship_mail[loop.index0] != None %}
+                                        <a href="mailto:{{ geoservice_link.authorship_mail[loop.index0] }}"><span class="glyphicon glyphicon-envelope" aria-hidden="true" title="{{ _('Kontakt') }}"></span></a>
+                                      {% endif %}
+                                      {{ geoservice_link.authorship_name[loop.index0] }} •
+                                    {% endif %}
+                                    {{ authorship_place }}
+                                  </span>
+                                {% endfor %}
+                              {% endif %}
+                              {% if geoservice_link.data_link != None %}
+                                <span class="full-width"><em>{{ _('Link') }}</em></span>
+                                <a href="{{ geoservice_link.data_link }}" target="_blank">
+                                  <span class="glyphicon glyphicon-link" aria-hidden="true"></span> {{ _('Link zu OpenData.HRO, dem Open-Data-Portal der Hanse- und Universitätsstadt Rostock') }}
+                                </a>
+                              {% endif %}
+                            {% endif %}
                           </div>
                         </div>
                       </div>
