--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -70,14 +70,12 @@
                 {% for external_tag in external_tags %}
                   <h5{% if loop.first %} class="first"{% endif %}>{{ external_tag.title }}</h5>
                   <div class="external-list-group">
-                    {% for external_link in external_links %}
-                      {% if external_link.tags[0].id == external_tag.id %}
-                        <a href="{{ external_link.link }}" target="_blank" class="list-group-item list-group-item-action">
-                          <span class="glyphicon glyphicon-{% if external_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ external_link.reachable_last_check|datetime_l10n('full') }}"></span>
-                          <span class="glyphicon glyphicon-eye-{% if external_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" title="{% if external_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
-                          {{ external_link.title }}
-                        </a>
-                      {% endif %}
+                    {% for external_link in external_tag.id|get_tag_links() %}
+                      <a href="{{ external_link.link }}" target="_blank" class="list-group-item list-group-item-action">
+                        <span class="glyphicon glyphicon-{% if external_link.reachable == True %}ok-sign green{% else %}remove-sign red{% endif %}" aria-hidden="true" title="{{ _('letzte Prüfung auf Erreichbarkeit') }}: {{ external_link.reachable_last_check|datetime_l10n('full') }}"></span>
+                        <span class="glyphicon glyphicon-eye-{% if external_link.public == True %}open green{% else %}close red{% endif %}" aria-hidden="true" title="{% if external_link.public == True %}{{ _('öffentlich zugänglich') }}{% else %}{{ _('nicht öffentlich zugänglich') }}{% endif %}"></span>
+                        {{ external_link.title }}
+                      </a>
                     {% endfor %}
                   </div>
                 {% endfor %}
@@ -109,16 +107,19 @@
                         </div>
                         <div id="geoservice-{{ geoservice_link.id }}" class="panel-collapse collapse">
                           <div class="panel-body">
-                            <h5 class="first">{{ _('Schlagworte/Tags/Keywords') }}</h5>
-                            <span class="full-width">
-                              {% for tag in geoservice_link.id|get_link_children_tags(True) %}
-                                  {{ tag }}{% if not loop.last %} •{% endif %}
-                              {% endfor %}
-                            </span>
+                            {% set link_children_tags = geoservice_link.id|get_link_children_tags(True) %}
+                            {% if link_children_tags|length > 0 %}
+                              <h5 class="first">{{ _('Schlagworte/Tags/Keywords') }}</h5>
+                              <span class="full-width">
+                                {% for tag in link_children_tags %}
+                                    {{ tag }}{% if not loop.last %} •{% endif %}
+                                {% endfor %}
+                              </span>
+                            {% endif %}
                             {% for child in geoservice_link.id|get_link_children(True) %}
                               <div class="geoservice-child">
                                 {% set typifier_tag = child.id|get_link_typifier_tag(True) %}
-                                <h5>{{ typifier_tag }}</h5>
+                                <h5 {% if link_children_tags|length == 0 %}class="first"{% endif %}>{{ typifier_tag }}</h5>
                                 {% if 'inspire' in typifier_tag|lower and child.inspire_annex_theme != None %}
                                   <span class="full-width"><em>{{ _('Annex-Thema') }}</em></span>
                                   <span class="full-width">{{ child.inspire_annex_theme }}</span>
