--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ url_for('index', lang_code = g.current_lang) }}">{{ config.TITLE }}</a>
+      <a class="navbar-brand" href="{{ url_for('index', lang_code = g.current_lang) }}">
+        <img src="{{ url_for('static', filename='images/geolotse.svg') }}" />
+        {{ config.TITLE }}
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
