--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
   ('situations', 'Lebenslagen')
 ] %}
 
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
